k8s/production/k8sbaseline/nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-ui-svc
  labels:
    app: myapp
    service: myapp-ui-svc
spec:
  ports:
  - port: 80
    name: http
  selector:
    app: myapp-ui
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-ui-deploy
  labels:
    app: myapp-ui
    ver: 0.1.0
    environment: production
    release: v1
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 3
      maxSurge: 2
  selector:
    matchLabels:
      app: myapp-ui
      ver: 0.1.0
    matchExpressions:
      - {key: environment, operator: In, values: [production]}
  template:
    metadata:
      labels:
        app: myapp-ui
        ver: 0.1.0
        environment: production
    spec:
      serviceAccountName: myapp-ui
      containers:
      - name: myapp-webserver
        image: nginx:latest
        ports:
        - containerPort: 80
