k8s/production/k8sbaseline/istio-subdomain.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: main-gateway
  namespace: istio-ingress
spec:
  selector:
    istio: ingress # use istio ingress gateway we created on install
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*.k8sbaseline.adamfowler.co.uk"
