k8s/production/k8sbaseline/istio-nginx.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: myapp-ui-vs
  namespace: istio-ingress
spec:
  hosts:
    - "myapp.k8sbaseline.adamfowler.co.uk"
  gateways:
  - main-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 80
        host: myapp-ui-svc.myapp.svc.cluster.local
